feat and fix: added refresh endpoint and adjusted login endpoint
