# internal/model/login.go
@@ -1,6 +1,7 @@
 package model
 
 type TokenRequest struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+	Remember *bool  `json:"remember" binding:"required"`
 }
