# swagger/v1/swagger.json
@@ -106,6 +106,50 @@
                 }
             }
         },
+        "/auth/refresh": {
+            "post": {
+                "description": "Obtém um novo token ao usuário",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Reautenticar usuário",
+                "parameters": [
+                    {
+                        "description": "Dados do usuário",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CreateUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/products": {
             "get": {
                 "security": [
@@ -325,24 +369,24 @@
             "type": "object",
             "required": [
                 "email",
-                "nome",
-                "nomeUsuario",
-                "senha"
+                "name",
+                "password",
+                "username"
             ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "nome": {
+                "name": {
                     "type": "string"
                 },
-                "nomeUsuario": {
+                "password": {
                     "type": "string"
                 },
-                "perfil": {
+                "profile": {
                     "type": "string"
                 },
-                "senha": {
+                "username": {
                     "type": "string"
                 }
             }
@@ -350,13 +394,13 @@
         "model.Product": {
             "type": "object",
             "properties": {
-                "productId": {
+                "product_id": {
                     "type": "integer"
                 },
-                "productName": {
+                "product_name": {
                     "type": "string"
                 },
-                "productPrice": {
+                "product_price": {
                     "type": "number"
                 }
             }
@@ -372,10 +416,10 @@
         "model.TokenRequest": {
             "type": "object",
             "properties": {
-                "nomeUsuario": {
+                "password": {
                     "type": "string"
                 },
-                "senha": {
+                "username": {
                     "type": "string"
                 }
             }
